--- a/MyFirstFPGA.qsf
+++ b/MyFirstFPGA.qsf
@@ -54,3 +54,4 @@ set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_RO
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name QIP_FILE pll.qip
 set_global_assignment -name SIP_FILE pll.sip
+set_global_assignment -name QIP_FILE lpm_mux_user.qip
