--- a/MyFirstFPGA.qsf
+++ b/MyFirstFPGA.qsf
@@ -48,10 +48,18 @@ set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 256
 set_global_assignment -name BDF_FILE MyFirstFPGA.bdf
 set_global_assignment -name VERILOG_FILE simple_counter.v
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name QIP_FILE pll.qip
 set_global_assignment -name SIP_FILE pll.sip
 set_global_assignment -name QIP_FILE lpm_mux_user.qip
+set_global_assignment -name VHDL_FILE lpm_mux_user.vhd
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_location_assignment PIN_V11 -to CLOCK_50
+set_location_assignment PIN_AH16 -to KEY[1]
+set_location_assignment PIN_AH17 -to KEY[0]
+set_location_assignment PIN_V15 -to LED[3]
+set_location_assignment PIN_V16 -to LED[2]
+set_location_assignment PIN_AA24 -to LED[1]
+set_location_assignment PIN_W15 -to LED[0]
