--- a/MyFirstFPGA.qsf
+++ b/MyFirstFPGA.qsf
@@ -55,7 +55,6 @@ set_global_assignment -name QIP_FILE pll.qip
 set_global_assignment -name SIP_FILE pll.sip
 set_global_assignment -name QIP_FILE lpm_mux_user.qip
 set_global_assignment -name VHDL_FILE lpm_mux_user.vhd
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_location_assignment PIN_V11 -to CLOCK_50
 set_location_assignment PIN_AH16 -to KEY[1]
 set_location_assignment PIN_AH17 -to KEY[0]
@@ -63,3 +62,17 @@ set_location_assignment PIN_V15 -to LED[3]
 set_location_assignment PIN_V16 -to LED[2]
 set_location_assignment PIN_AA24 -to LED[1]
 set_location_assignment PIN_W15 -to LED[0]
+set_global_assignment -name SDC_FILE MyFirstFPGA.sdc
+set_global_assignment -name ENABLE_OCT_DONE OFF
+set_global_assignment -name ENABLE_CONFIGURATION_PINS OFF
+set_global_assignment -name ENABLE_BOOT_SEL_PIN OFF
+set_global_assignment -name STRATIXV_CONFIGURATION_SCHEME "PASSIVE SERIAL"
+set_global_assignment -name USE_CONFIGURATION_DEVICE ON
+set_global_assignment -name CRC_ERROR_OPEN_DRAIN ON
+set_global_assignment -name RESERVE_ALL_UNUSED_PINS_WEAK_PULLUP "AS INPUT TRI-STATED"
+set_global_assignment -name OUTPUT_IO_TIMING_NEAR_END_VMEAS "HALF VCCIO" -rise
+set_global_assignment -name OUTPUT_IO_TIMING_NEAR_END_VMEAS "HALF VCCIO" -fall
+set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -rise
+set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -fall
+set_global_assignment -name ACTIVE_SERIAL_CLOCK FREQ_100MHZ
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
